Fixed Login Information out of container

--- a/Src/CSS/login.css
+++ b/Src/CSS/login.css
@@ -62,7 +62,6 @@ form div input:not(#login-button) {
       min-height: 400px;
     }
     .container {
-      height: 100vh;
       width: 100%;
       background-color: #3A4B48;
       display: flex;
@@ -86,7 +85,6 @@ form div input:not(#login-button) {
     }
 
     .container {
-      height: 100vh;
       width: 80%;
       background-color: #3A4B48;
       display: flex;
